# image-gen-telegram-bot-wrapper

./: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
bot/: config.py  dispatcher.py  main.py
bot/handlers/: commands.py  message.py
bot/services/: generation.py  openrouter.py
bot/telegram/: keyboards.py  media.py  replies.py
